Gifs not showing correctly

--- a/CS460/HW7/HW7/Content/Site.css
+++ b/CS460/HW7/HW7/Content/Site.css
@@ -16,3 +16,8 @@ textarea {
     max-width: 280px;
 }
 
+#message{
+    max-width: 1140px;
+}
+
+
